Use java.nio.file instead of java.io