@@ -19,7 +19,6 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
@@ -41,7 +40,7 @@ import org.slf4j.LoggerFactory;
 class SetVerifyFlagsTest {
     private final static Logger LOGGER = LoggerFactory.getLogger(SetVerifyFlagsTest.class);
 
-    private static final Path OUT_BASE = Paths.get("target", "data", "out");
+    private static final Path OUT_BASE = Path.of("target", "data", "out");
 
     @BeforeAll
     static void setup() throws IOException {
